[tool.poetry]
name = "scoutsy"
version = "0.1.0"
description = ""
authors = ["anonymous"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
seaborn = "^0.13.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
beautifulsoup4 = "^4.12.3"
youtube-transcript-api = "^0.6.2"
tqdm = "^4.66.2"
loguru = "^0.7.2"
cryptography = "^42.0.5"
openai = "^1.13.3"
tenacity = "^8.2.3"
jsonlines = "^4.0.0"
tiktoken = "^0.6.0"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
python-calamine = "^0.2.0"
yt-dlp = "^2024.4.9"
google-api-python-client = "^2.127.0"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
google-generativeai = "^0.5.2"
voyageai = "^0.2.2"
tokenizers = "^0.19.1"
openpyxl = "^3.1.2"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
